--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "demo": "gulp nodemon",
     "test": "test"
   },
+  "engines": {
+    "node": ">= 7.0.0"
+  },
   "keywords": [
     "css",
     "html",
@@ -23,16 +26,13 @@
     "gulp": "3.9.1",
     "gulp-clean": "0.3.2",
     "gulp-concat-css": "2.3.0",
+    "gulp-nodemon": "2.2.1",
     "gulp-postcss": "7.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "3.1.0",
     "koa": "2.2.0",
     "koa-static": "3.0.0",
-    "normalize.css": "7.0.0"
-  },
-  "dependencies": {
     "gulp-changed": "3.1.0",
-    "normalize": "0.3.1",
-    "normalize-scss": "7.0.0"
+    "normalize.css": "7.0.0"
   }
 }
